--- a/mailbox/Makefile
+++ b/mailbox/Makefile
@@ -3,17 +3,20 @@
 CC:=gcc
 CFLAGS = -O0 -Wall
 LIBS = -lpthread
+INCLUDE = -I include
+SRC_PATH = src/
+OBJ_PATH = build/
 
 SRC=$(wildcard *.c)
 OBJS=$(SRC:.c=.o)
 
 all: app
 
-%.o: %.c
-	${CC} $(CFLAGS) -c $< -o $@
+$(OBJ_PATH)%.o: $(SRC_PATH)%.c
+	$(CC) $(CFLAGS) -c $(INCLUDE) $< -o $@
 
-app: ${OBJS}
-	${CC} $^ -o $@ $(LIBS)
+$(OBJ_PATH)app: $(OBJ_PATH)$(OBJS)
+	$(CC) $^ -o $@ $(LIBS)
 
 clean:
 	rm -f *.o app
