SDU: Update makefile

--- a/mailbox/Makefile
+++ b/mailbox/Makefile
@@ -1,11 +1,11 @@
 #embedded linux course
 
 CC:=gcc
-CFLAGS = -O0 -Wall
-LIBS = -lpthread
-INCLUDE = -I include
-SRC_PATH = src/
-OBJ_PATH = build/
+CFLAGS= O0 -Wall
+LIBS=-lpthread
+INCLUDE=-I include
+SRC_PATH=src/
+OBJ_PATH=build/
 
 SRC=$(wildcard $(SRC_PATH)*.c)
 SRC_TMP=$(notdir $(SRC))
@@ -15,7 +15,7 @@ OBJS=$(addprefix $(OBJ_PATH), $(OBJS_TMP))
 all: make_dir app
 
 make_dir:
-    test -d $(OBJ_PATH) || mkdir $(OBJ_PATH)
+	test -d $(OBJ_PATH) || mkdir $(OBJ_PATH)
 
 $(OBJ_PATH)%.o: $(SRC_PATH)%.c
 	$(CC) $(CFLAGS) -c $(INCLUDE) $< -o $@
@@ -24,8 +24,7 @@ app: $(OBJ_PATH)$(OBJS)
 	$(CC) $^ -o $(OBJ_PATH)$@ $(LIBS)
 
 clean:
-	rm -f *.o app
-    rm -r $(OBJ_PATH)
+	rm -r $(OBJ_PATH)
 
-.PHONY: all clean
+.PHONY: all clean make_dir
 
